<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    style="@style/Widget.AppCompat.Button"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pagebkg"
    android:orientation="vertical"
    tools:context=".Canteen_selection_user">

    <TextView
        android:id="@+id/display_selection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:fontFamily="@font/righteous"
        android:text="Choose Your Canteen!"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <androidx.cardview.widget.CardView
        android:id="@+id/sai_pooja_canteen_cardview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#D9D9D9"
        app:cardCornerRadius="4dp"
        app:cardElevation="10dp"
        android:layout_margin="7dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="10dp">

            <ImageView
                android:id="@+id/sai_pooja_canteen_img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_marginVertical="20dp"
                app:srcCompat="@drawable/canteen1"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/college_canteen_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/righteous"
                android:layout_marginTop="20dp"
                android:text="@string/name_tag_sai_pooja"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Loc1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:text="@string/sai_pooja_location"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/Tim1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp"
                android:text="@string/timing"
                android:textColor="#000000"
                android:textSize="18sp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/nescafe_cardview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#D9D9D9"
        app:cardCornerRadius="4dp"
        app:cardElevation="10dp"
        android:layout_margin="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:id="@+id/nescafe__img"
                android:layout_width="192dp"
                android:layout_height="127dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="10dp"
                android:padding="5dp"
                app:srcCompat="@drawable/nescafe_img"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/college_canteen_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/righteous"
                android:layout_marginTop="28dp"
                android:text="Nescafe"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Loc1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="12dp"
                android:text="Location: 2nd Floor"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/Tim1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp"
                android:text="@string/timing"
                android:textColor="#000000"
                android:textSize="18sp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <androidx.cardview.widget.CardView
        android:id="@+id/juice_centre_cardview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#D9D9D9"
        app:cardCornerRadius="4dp"
        app:cardElevation="10dp"
        android:layout_margin="7dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="10dp"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:id="@+id/juice_centre_img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_marginVertical="20dp"
                app:srcCompat="@drawable/canteen4"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/juice_centre_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/righteous"
                android:layout_marginTop="20dp"
                android:text="Juice Centre"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Loc1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:text="@string/sai_pooja_location"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/Tim1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp"
                android:text="@string/timing"
                android:textColor="#000000"
                android:textSize="18sp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/rancho_carview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#D9D9D9"
        app:cardCornerRadius="4dp"
        app:cardElevation="10dp"
        android:layout_margin="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="10dp"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:id="@+id/college_canteen_img"
                android:layout_width="192dp"
                android:layout_height="117dp"
                android:layout_marginVertical="20dp"
                android:padding="5dp"
                app:srcCompat="@drawable/rancho_cafe"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/rancho_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/righteous"
                android:layout_marginTop="22dp"
                android:text="Rancho"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Loc1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:text="Location: Ground Floor"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/Tim1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp"
                android:text="@string/timing"
                android:textColor="#000000"
                android:textSize="18sp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    </LinearLayout>
    </LinearLayout>
</LinearLayout>