<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    style="@style/Widget.AppCompat.Button"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pagebkg"
    android:padding="5dp"
    android:orientation="vertical"
    android:gravity="fill_vertical"
    tools:context=".admin_canteen_selection">

    <ImageView
        android:id="@+id/back_btn"
        android:layout_width="39dp"
        android:layout_height="42dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_gravity="left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_button"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/display_selection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/righteous"
        android:text="CHOOSE YOUR CANTEEN!"
        android:textColor="#000000"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="35dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp"
            android:layout_marginBottom="30dp">
            <androidx.cardview.widget.CardView
                android:id="@+id/sai_pooja_canteen_cardview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#D9D9D9"
                app:cardCornerRadius="4dp"
                app:cardElevation="10dp"
                android:layout_margin="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_gravity="center_horizontal"
                    android:padding="5dp">

                    <ImageView
                        android:id="@+id/sai_pooja_canteen_img"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:layout_marginTop="30dp"
                        app:srcCompat="@drawable/canteen1"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/sai_pooja_name_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/righteous"
                        android:layout_marginTop="20dp"
                        android:text="@string/name_tag_sai_pooja"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/sai_pooja_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="20dp"
                        android:text="@string/sai_pooja_location"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/sai_pooja_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="40dp"
                        android:text="@string/timing"
                        android:textColor="#000000"
                        android:textSize="18sp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/nescafe_cardview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#D9D9D9"
                app:cardCornerRadius="4dp"
                app:cardElevation="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="5dp"
                    android:layout_gravity="center_horizontal">

                    <ImageView
                        android:id="@+id/nescafe__img"
                        android:layout_width="190dp"
                        android:layout_height="120dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="30dp"
                        android:padding="5dp"
                        app:srcCompat="@drawable/nescafe_img"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/nescafe_name_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/righteous"
                        android:layout_marginTop="15dp"
                        android:text="nescafe"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/nescafe_loc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="20dp"
                        android:text="location_ground_floor"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/nescafe_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="40dp"
                        android:text="@string/timing"
                        android:textColor="#000000"
                        android:textSize="18sp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp">
            <androidx.cardview.widget.CardView
                android:id="@+id/juice_centre_cardview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#D9D9D9"
                app:cardCornerRadius="4dp"
                app:cardElevation="10dp"
                android:layout_margin="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingHorizontal="5dp"
                    android:layout_gravity="center_horizontal">

                    <ImageView
                        android:id="@+id/juice_centre_img"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:layout_marginTop="30dp"
                        app:srcCompat="@drawable/canteen4"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/juice_centre_name_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/righteous"
                        android:layout_marginTop="20dp"
                        android:text="juice_centre"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/juice_centre_loc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="20dp"
                        android:text="@string/sai_pooja_location"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/juice_centre_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="40dp"
                        android:text="@string/timing"
                        android:textColor="#000000"
                        android:textSize="18sp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/rancho_cardview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#D9D9D9"
                app:cardCornerRadius="4dp"
                app:cardElevation="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingHorizontal="5dp"
                    android:layout_gravity="center_horizontal">

                    <ImageView
                        android:id="@+id/rancho_img"
                        android:layout_width="175dp"
                        android:layout_height="117dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginEnd="2dp"
                        android:padding="5dp"
                        app:srcCompat="@drawable/rancho_cafe"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/rancho_name_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/righteous"
                        android:layout_marginTop="20dp"
                        android:text="rancho"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/rancho_Loc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="20dp"
                        android:text="location_2nd_floor"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/rancho_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="40dp"
                        android:text="@string/timing"
                        android:textColor="#000000"
                        android:textSize="18sp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>